<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">智能家居</string>
    <string name="action_settings">设置</string>
    <string name="action_sign">注册</string>
    <string name="cofig_center">配置控制中心</string>
    <string name="cofig_label">【配置】</string>
    <string name="cofig_center_offline">控制中心离线</string>
    <string name="cofig_center_online">控制中心在线</string>
    <string name="config_whole_Switch_on">总开</string>
    <string name="config_whole_Switch_off">总关</string>
    <string name="jdlist_connecting_wifi">当前已连接WIFI：</string>
    <string name="jdlist_connecting_wifi_notconfig">未配置</string>
    <string name="jdlist_conntected_wifi_label">  当前WIFI：</string>
    <string name="jdlist_add_device">添加设备</string>
    <string name="jdlist_help">1.长按设备图标可以重命名。 \n2.如果配置过的设备看不到，请检查当前WIFI\n3.设备在线状态可以刷新看实时状态。</string>
    <string name="jdlist_guideline">使用帮助</string>
    <string name="ok">确定</string>
    <string name="jdlist_pleasechoose">请选择</string>
    <string name="on">开启</string>
    <string name="off">关闭 </string>
    <string name="cancel">取消</string>
    <string name="findmodule">搜索设备</string>
    <string name="clearconfig">重置</string>
    <string name="switch_tip">开关操作</string>
    <string name="message_cf_offline">控制中心不在线\n请刷新看看</string>
    <string name="show_alltimer_setting">查看全部定时设置</string>
    <string name="timer_all_list">全部已设置时间列表：</string>
    <string name="timer_devicename">设备名</string>
    <string name="timer_week">星期</string>
    <string name="timer_time">时间</string>
    <string name="timer_switch">开关</string>
    <string name="timer_opeation">操作</string>
    <string name="jd_icebox">冰箱</string>
    <string name="jd_computer">电脑</string>
    <string name="jd_tele">电视</string>
    <string name="jd_blower">风扇</string>
    <string name="jd_aircon">空调</string>
    <string name="jd_heater">热水器</string>
    <string name="jd_vacuumcleaner">吸尘器</string>
    <string name="jd_washer">洗衣机</string>
    <string name="jd_sound">音响</string>
    <string name="refresing">正在刷新中！</string>
    <string name="config_lable1">配置</string>
    <string name="config_fail">设备配置失败！</string>
    <string name="config_success">设备配置成功！</string>
    <string name="input_wifi">请输入选择你家里的wifi！</string>
    <string name="input_password">请输入wifi密码！</string>
    <string name="choose_wifi">请选择你要配置的wifi！</string>
    <string name="living_room">客厅</string>
    <string name="bedroom">卧室</string>
    <string name="study">书房</string>
    <string name="cookroom">厨房</string>
    <string name="bathroom">卫生间</string>
    <string name="balcony">阳台</string>
    <string name="app_timer_startup">APP启动定时</string>
    <string name="message_must_havedate">必须选择一个日期</string>
    <string name="message_repeater_datasetting">设置的时间重复\n将替换之前的设置</string>
    <string name="message_lessthennow">设置的时间小于当前时间\n将于明天这个时候开始启用</string>
    <string name="English">English</string>
    <string name="Chinese">中文</string>
    <string name="LampID">灯具编号：</string>
    <string name="color_temperature">色温</string>
    <string name="Brightness">亮度</string>
    <string name="xiaoyedeng">小夜灯模式</string>
    <string name="life">生活模式</string>
    <string name="rest">休息模式</string>
    <string name="Romantic">浪漫模式</string>
    <string name="timersetting">定时设置</string>
    <string name="bootautostartsetting">开机启动定时设定</string>
    <string name="bootautostartall">开机启动全部定时</string>
    <string name="messagestartappeveryday">如果取消选择\n则需要每天打开一次APP\n定时才能运行</string>
    <string name="back">返回</string>
    <string name="deviceconfig">设备配置</string>
    <string name="refresh">刷新</string>
    <string name="wifi_account">WIFI账号：</string>
    <string name="wifi_password">WIFI密码：</string>
    <string name="rember_password">记住密码</string>
    <string name="device_list">设备列表：</string>
    <string name="rename">重命名</string>
    <string name="input_newname">输入新名称</string>
    <string name="edit">编辑</string>
    <string name="del">删除</string>
    <string name="Lamp_con">照明控制</string>
    <string name="Appliances">家电控制 </string>
    <string name="choosetime">选择时间</string>
    <string name="device_ID">设备编号：</string>
    <string name="everyday">每天</string>
    <string name="Mon">周一</string>
    <string name="Tus">周二</string>
    <string name="Wed">周三</string>
    <string name="Thu">周四</string>
    <string name="Fri">周五</string>
    <string name="Sta">周六</string>
    <string name="Sun">周日</string>
    <string name="Timer_Switch">定时开关：</string>
    <string name="addtimer">添加定时设置</string>
    <string name="Timerlist">已设置时间列表：</string>
    <string name="telelogo">智能照明</string>
    <string name="addlamp">添加灯控设备</string>
    <string name="bianhao"> 编号\n 描述</string>
    <string name="category">类别</string>
    <string name="operation_fail">操作失败</string>
    <string name="speedness">速度</string>
    <string name="modelflash">快闪</string>
    <string name="modelfade">快变</string>
    <string name="modelstrobe">慢闪</string>
    <string name="modelsmooth">慢变</string>
    
    <string name="app_version">v0.3.4.3</string>
    <string name="tvApSsidTitle">SSID: </string>
    <string name="tvPasswordTitle">Password: </string>
    <string name="switchIsSsidHiddenTitle">热点是否隐藏:</string>
    <string name="spinnerTaskResultCountTitle">任务结果累计</string>
    <string name="btnConfirmTitle">Confirm</string>
    <string name="mainwelcome">主登录界面</string>
    <string name="user_password">密码:</string>
    <string name="user_name">用户名:</string>
    <string name="pleaseenterusername">请输入用户名</string>
    <string name="pleaseenterpassword">请输入密码</string>
    <string name="cloudlogin">远程登录</string>
    <string name="login">手机管理登录</string>
    <string name="rememberpassword">记住密码</string>
    <string name="testview">管理员操作界面</string>
    <string name="lighton">开灯</string>
    <string name="lightoff">关灯</string>
    <string name="lightparing">灯的配对</string>
    <string name="lightLI">亮度增加</string>
    <string name="lightLD">亮度减少</string>
    <string name="lightTI">色度增加</string>
    <string name="lightTD">色度减少</string>
    <string name="lightred">红色</string>
    <string name="lightgreen">绿色</string>
    <string name="lightblue">蓝色</string>
    <string name="lightstatus">灯的状态</string>
    <string name="modulerestart">模块重启</string>
    <string name="connectonenet">连接上ONENET</string>
    <string name="disconnectonenet">断开ONENET</string>
    <string name="onenetlightoff">远程发送关灯指令</string>
    <string name="onenetlighton">远程发送开灯指令</string>
    <string name="onenetrestart">远程发送重启指令</string>
    <string name="onenetquery">远程获取灯的指令</string>
    <string name="onenetview">远程操作界面</string>
    <string name="onenetdevid">目标设备ID</string>
    <string name="onenetlocalid">本机设备ID</string>
    <string name="enterdevID">请输入目标ID号</string>
    <string name="enterlocalID">请输入本机的ID号</string>
    <string name="onenetsigndev">注册设备</string>
    <string name="onenetsignview">注册设备界面</string>
    <string name="onenetsignname">输入注册设备的名称</string>
    <string name="onenetsigninfo">输入注册设备的说明</string>
    <string name="onenetsignsucess">注册成功</string>
    <string name="onenetsign_already_registed">您的手机已经注册过了，无需重复注册</string>
    <string name="onenetsign_un_registed">您的手机还未注册，请先注册之后再使用</string>
    <string name="tips_to_check_network">请检查您的网络连接是否正常</string>
     
    <string name="clearudpconfig">重置UDP设备信息</string>
    <string name="sendudpbrocast">发送UDP广播</string>

</resources>