<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bj" >

    <EditText
        android:id="@+id/ed_dev_info"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="12"
        android:hint="@string/onenetsigninfo"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/ed_dev_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ed_dev_info"
        android:layout_alignLeft="@+id/ed_dev_info"
        android:layout_marginBottom="42dp"
        android:ems="12"
        android:hint="@string/onenetsignname"
        android:inputType="text" />

    <Button
        android:id="@+id/onenet_dev_sign"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ed_dev_info"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:text="@string/onenetsigndev" />

    <TextView
        android:id="@+id/tv_sign_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:text="@string/onenetsignview" />

</RelativeLayout>
