<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"
    android:gravity="center"
    android:orientation="vertical"
>

    <TextView
        android:id="@+id/tv_rename_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:text="@string/rename"
        android:textColor="#808080"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/sp_rename_room_list"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg"
        android:layout_marginTop="20dp"
        android:hint="@string/input_newname"
        android:paddingLeft="10dp" >
    </EditText>

    <Button
        android:id="@+id/btn_rename_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:text="@string/ok"
        android:textColor="#808080"
        android:textSize="20dp"
        android:textStyle="bold" />

</LinearLayout>